Add personal task descriptors

--- a/index.html
+++ b/index.html
@@ -652,6 +652,43 @@
         { value: 4, text: "4: High cognitive effort — must summarize complex clinical picture concisely." },
         { value: 5, text: "5: Very complex — appeals, multidisciplinary coordination, or justification requiring clinical precision." }
       ]
+    },
+    personal: {
+      importance: [
+        { value: 1, text: "1 – Trivial — doesn’t really matter if done" },
+        { value: 2, text: "2 – Mildly useful — minor quality-of-life improvement" },
+        { value: 3, text: "3 – Helpful — meaningful progress toward a goal" },
+        { value: 4, text: "4 – Significant — affects well-being or relationships" },
+        { value: 5, text: "5 – Critical — has serious emotional, financial, or health consequences" }
+      ],
+      urgency: [
+        { value: 1, text: "1 – No time pressure — can wait indefinitely" },
+        { value: 2, text: "2 – Slight — would be good to do soon" },
+        { value: 3, text: "3 – Moderate — needs attention within a few days" },
+        { value: 4, text: "4 – High — needs to be done today" },
+        { value: 5, text: "5 – Immediate — must be addressed now" }
+      ],
+      interest: [
+        { value: 1, text: "1 – Dreaded — pure avoidance energy" },
+        { value: 2, text: "2 – Unpleasant but tolerable" },
+        { value: 3, text: "3 – Neutral — neither appealing nor aversive" },
+        { value: 4, text: "4 – Mildly engaging" },
+        { value: 5, text: "5 – Genuinely energizing or rewarding" }
+      ],
+      difficulty: [
+        { value: 1, text: "1 – Very hard — high resistance, many steps, or emotionally draining" },
+        { value: 2, text: "2 – Challenging — mentally or logistically demanding" },
+        { value: 3, text: "3 – Moderate — manageable with steady focus" },
+        { value: 4, text: "4 – Mild effort — easy, straightforward, minimal resistance" },
+        { value: 5, text: "5 – Simple — effortless, can be done on autopilot" }
+      ],
+      timeToStart: [
+        { value: 1, text: "1 – Requires major setup or emotional readiness" },
+        { value: 2, text: "2 – Some prep work before starting" },
+        { value: 3, text: "3 – Can start with minimal prep" },
+        { value: 4, text: "4 – Ready to begin immediately" },
+        { value: 5, text: "5 – Already in motion / one click from done" }
+      ]
     }
   };
 
