--- a/index.html
+++ b/index.html
@@ -411,11 +411,106 @@
       margin-top: 1rem;
     }
     [aria-live] { outline: none; }
+    .meltdown-sos-button {
+      position: fixed;
+      bottom: 1.5rem;
+      left: 1.5rem;
+      background: #ff4d4f;
+      color: #fff;
+      font-weight: 600;
+      border-radius: 999px;
+      padding: 0.75rem 1.25rem;
+      box-shadow: 0 8px 20px rgba(255, 77, 79, 0.35);
+      z-index: 1200;
+      margin: 0;
+    }
+    .meltdown-sos-button:focus-visible {
+      outline: 2px solid #fff;
+      outline-offset: 2px;
+    }
+    .meltdown-shield {
+      position: fixed;
+      bottom: 1.5rem;
+      right: 1.5rem;
+      width: min(340px, 90vw);
+      background: rgba(10, 10, 10, 0.95);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 12px;
+      padding: 1rem;
+      color: #f5f5f5;
+      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.45);
+      z-index: 1300;
+    }
+    .meltdown-shield-header {
+      font-size: 1rem;
+      font-weight: 600;
+      margin: 0 0 0.75rem;
+    }
+    .meltdown-shield-prompt {
+      font-size: 0.95rem;
+      background: rgba(32, 32, 32, 0.85);
+      border-radius: 8px;
+      padding: 0.75rem;
+      margin-bottom: 0.75rem;
+      line-height: 1.45;
+    }
+    .meltdown-shield-prompt strong {
+      display: block;
+      margin-bottom: 0.35rem;
+    }
+    .meltdown-shield ul {
+      margin: 0 0 0.75rem;
+      padding-left: 1.1rem;
+      font-size: 0.9rem;
+      max-height: 160px;
+      overflow-y: auto;
+    }
+    .meltdown-shield li {
+      margin: 0.4rem 0;
+      line-height: 1.4;
+    }
+    .meltdown-shield-actions {
+      display: flex;
+      justify-content: flex-end;
+      gap: 0.5rem;
+      flex-wrap: wrap;
+    }
+    .meltdown-shield button {
+      font-size: 0.85rem;
+    }
+    .meltdown-top-task {
+      color: #7bd88f;
+      font-weight: 600;
+    }
   </style>
 </head>
 <body>
   <h1>🎯 Task Focus</h1>
   <p id="billingReminder" class="billing-reminder"></p>
+
+  <button
+    id="meltdownSosButton"
+    class="meltdown-sos-button"
+    type="button"
+    aria-label="Activate Meltdown Shield"
+    onclick="activateShield()"
+  >🆘 I'm Overwhelmed</button>
+
+  <section
+    id="meltdownShield"
+    class="meltdown-shield hidden"
+    aria-live="polite"
+    aria-label="Meltdown Shield Panel"
+    aria-hidden="true"
+  >
+    <h4 class="meltdown-shield-header">🛡️ Meltdown Shield Activated</h4>
+    <div id="meltdownShieldPrompt" class="meltdown-shield-prompt" aria-live="assertive"></div>
+    <ul id="meltdownShieldSteps"></ul>
+    <div class="meltdown-shield-actions">
+      <button id="meltdownShieldNext" type="button">▶️ Next</button>
+      <button type="button" onclick="deactivateShield()">❌ Close</button>
+    </div>
+  </section>
 
   <!-- Task entry form -->
   <section id="capture">
@@ -1821,6 +1916,186 @@
   let focusSoundEnabled = true;
   let focusAudioContext = null;
 
+  const meltdownShieldState = {
+    stepIndex: 0
+  };
+
+  const MELTDOWN_STEPS = [
+    {
+      title: "Noise Reduction",
+      description: "Close all other browser tabs to eliminate competing stimuli."
+    },
+    {
+      title: "4–4–4 Breathing",
+      description: "Take three cycles: inhale for four seconds, hold for four, exhale for four."
+    },
+    {
+      title: "Verbal Grounding",
+      description: "Say aloud: ‘I am safe. I can pick one thing.’"
+    },
+    {
+      title: "Task Narrowing",
+      descriptionBuilder: () => {
+        const topTaskName = getTopTaskName();
+        const fragment = document.createDocumentFragment();
+        const intro = document.createElement("span");
+        intro.textContent = "Remember there is just one next step. Top priority task:";
+        const nameEl = document.createElement("span");
+        nameEl.className = "meltdown-top-task";
+        nameEl.textContent = topTaskName || "No active tasks available.";
+        fragment.appendChild(intro);
+        fragment.appendChild(document.createElement("br"));
+        fragment.appendChild(nameEl);
+        return fragment;
+      }
+    },
+    {
+      title: "5-Minute Action Timer",
+      description: "Set a five-minute timer and commit to only the first subtask for this session."
+    },
+    {
+      title: "Body Movement",
+      description: "Stand up, shake out your arms, and loosen your shoulders."
+    },
+    {
+      title: "Music Cue",
+      description: "Play a favorite upbeat song to pair with your movement."
+    },
+    {
+      title: "Re-entry",
+      description: "Slide back into Focus Mode ready to attack the task with reduced anxiety."
+    }
+  ];
+
+  function resolvePriorityValue(value) {
+    const num = Number(value);
+    return Number.isFinite(num) ? num : 0;
+  }
+
+  function getTopTaskName() {
+    const sourceTasks = Array.isArray(tasks) ? tasks : [];
+    const activeTasks = sourceTasks
+      .filter(task => !isTaskCompleted(task))
+      .sort((a, b) => resolvePriorityValue(b.priority) - resolvePriorityValue(a.priority));
+
+    if (activeTasks.length > 0) {
+      return activeTasks[0]?.name || null;
+    }
+
+    try {
+      const saved = localStorage.getItem("tasks");
+      if (!saved) return null;
+      const parsed = JSON.parse(saved);
+      if (!Array.isArray(parsed)) return null;
+      const fallbackActive = parsed
+        .filter(task => task && !isTaskCompleted(task))
+        .map(task => ({
+          ...task,
+          priority: resolvePriorityValue(task?.priority)
+        }))
+        .sort((a, b) => b.priority - a.priority);
+      return fallbackActive.length > 0 ? (fallbackActive[0].name || null) : null;
+    } catch (error) {
+      console.error("Unable to parse saved tasks for Meltdown Shield.", error);
+      return null;
+    }
+  }
+
+  function buildMeltdownDescription(step) {
+    if (typeof step.descriptionBuilder === "function") {
+      return step.descriptionBuilder();
+    }
+    const span = document.createElement("span");
+    span.textContent = step.description;
+    return span;
+  }
+
+  function resetMeltdownShieldProgress() {
+    meltdownShieldState.stepIndex = 0;
+    const list = $("meltdownShieldSteps");
+    if (list) {
+      list.innerHTML = "";
+    }
+    const nextBtn = $("meltdownShieldNext");
+    if (nextBtn) {
+      nextBtn.disabled = false;
+      nextBtn.textContent = "▶️ Next";
+    }
+    updateMeltdownPrompt();
+  }
+
+  function updateMeltdownPrompt() {
+    const prompt = $("meltdownShieldPrompt");
+    const nextBtn = $("meltdownShieldNext");
+    if (!prompt || !nextBtn) return;
+
+    prompt.innerHTML = "";
+
+    if (meltdownShieldState.stepIndex >= MELTDOWN_STEPS.length) {
+      const finalMessage = document.createElement("strong");
+      finalMessage.textContent = "System stabilized. Ready for Focus Mode.";
+      prompt.appendChild(finalMessage);
+      nextBtn.disabled = true;
+      nextBtn.textContent = "Complete";
+      return;
+    }
+
+    const currentStep = MELTDOWN_STEPS[meltdownShieldState.stepIndex];
+    const heading = document.createElement("strong");
+    heading.textContent = `Step ${meltdownShieldState.stepIndex + 1}: ${currentStep.title}`;
+    const description = buildMeltdownDescription(currentStep);
+    prompt.appendChild(heading);
+    prompt.appendChild(description);
+    nextBtn.disabled = false;
+    nextBtn.textContent = "▶️ Next";
+  }
+
+  function activateShield() {
+    const panel = $("meltdownShield");
+    if (!panel) return;
+    panel.classList.remove("hidden");
+    panel.setAttribute("aria-hidden", "false");
+    resetMeltdownShieldProgress();
+    const nextBtn = $("meltdownShieldNext");
+    if (nextBtn) {
+      nextBtn.focus();
+    }
+  }
+
+  function deactivateShield() {
+    const panel = $("meltdownShield");
+    if (!panel) return;
+    panel.classList.add("hidden");
+    panel.setAttribute("aria-hidden", "true");
+    resetMeltdownShieldProgress();
+    const sosButton = $("meltdownSosButton");
+    if (sosButton) {
+      sosButton.focus();
+    }
+  }
+
+  function completeCurrentMeltdownStep() {
+    if (meltdownShieldState.stepIndex >= MELTDOWN_STEPS.length) {
+      updateMeltdownPrompt();
+      return;
+    }
+
+    const list = $("meltdownShieldSteps");
+    if (!list) return;
+
+    const step = MELTDOWN_STEPS[meltdownShieldState.stepIndex];
+    const listItem = document.createElement("li");
+    const stepLabel = document.createElement("strong");
+    stepLabel.textContent = `${step.title}`;
+    listItem.appendChild(stepLabel);
+    listItem.appendChild(document.createElement("br"));
+    listItem.appendChild(buildMeltdownDescription(step));
+    list.appendChild(listItem);
+
+    meltdownShieldState.stepIndex += 1;
+    updateMeltdownPrompt();
+  }
+
   function clearFormFields() {
     setDefaultFieldValues();
   }
@@ -2893,6 +3168,10 @@
   }
 
   window.addEventListener('DOMContentLoaded', () => {
+    const nextStepBtn = $("meltdownShieldNext");
+    if (nextStepBtn) {
+      nextStepBtn.addEventListener("click", completeCurrentMeltdownStep);
+    }
     initializeChartFields();
     registerFieldListeners();
     registerTaskListModeControl();
