--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Task Focus</title>
   <style>
     body {
@@ -844,14 +845,19 @@
       font-family: "Inter", "SF Pro Display", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
       margin: 0;
       min-height: 100vh;
+      width: 100%;
+      box-sizing: border-box;
       display: flex;
-      justify-content: center;
-      padding: var(--space-5) var(--space-2) 120px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: clamp(1.5rem, 4vw, 2.5rem) clamp(1rem, 4vw, 2.25rem) 120px;
       line-height: 1.6;
     }
 
     .app-shell {
       width: min(100%, 1100px);
+      margin: 0 auto;
       display: flex;
       flex-direction: column;
       gap: var(--space-4);
@@ -866,6 +872,58 @@
     @media (max-width: 768px) {
       .app-shell {
         width: min(100%, 720px);
+      }
+
+      body {
+        padding: clamp(1.25rem, 5vw, 2rem) clamp(0.85rem, 4vw, 1.75rem) 100px;
+      }
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: clamp(1rem, 6vw, 1.5rem) clamp(0.75rem, 5vw, 1.25rem) 90px;
+      }
+
+      .action-bar {
+        flex-direction: column;
+        align-items: stretch;
+        gap: var(--space-2);
+      }
+
+      .action-bar-primary,
+      .action-bar-secondary {
+        width: 100%;
+        margin-left: 0;
+      }
+
+      .action-bar-primary {
+        flex-direction: column;
+      }
+
+      .action-bar .btn {
+        width: 100%;
+        justify-content: center;
+      }
+
+      .action-bar-secondary {
+        display: grid;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        gap: var(--space-1);
+      }
+
+      .action-bar-secondary .icon-button {
+        width: 100%;
+        height: 44px;
+      }
+
+      .card {
+        padding: var(--space-3);
+        gap: var(--space-2);
+      }
+
+      .toast-container {
+        left: var(--space-2);
+        right: var(--space-2);
       }
     }
 
